Compiler_Design/Project_2_Syntax_Analyzer/Example/csv-example-java/CSVParser.java
// $ANTLR 3.4 CSV.g 2012-04-25 12:29:47

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class CSVParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Comma", "LineBreak", "QuotedValue", "SimpleValue"
    };

    public static final int EOF=-1;
    public static final int Comma=4;
    public static final int LineBreak=5;
    public static final int QuotedValue=6;
    public static final int SimpleValue=7;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public CSVParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CSVParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return CSVParser.tokenNames; }
    public String getGrammarFileName() { return "CSV.g"; }



    // $ANTLR start "file"
    // CSV.g:3:1: file returns [List<List<String>> data] : ( row )+ EOF ;
    public final List<List<String>> file() throws RecognitionException {
        List<List<String>> data = null;


        List<String> row1 =null;


        data = new ArrayList<List<String>>();
        try {
            // CSV.g:5:5: ( ( row )+ EOF )
            // CSV.g:5:8: ( row )+ EOF
            {
            // CSV.g:5:8: ( row )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= QuotedValue && LA1_0 <= SimpleValue)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // CSV.g:5:9: row
            	    {
            	    pushFollow(FOLLOW_row_in_file33);
            	    row1=row();

            	    state._fsp--;


            	    data.add(row1);

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            match(input,EOF,FOLLOW_EOF_in_file39); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return data;
    }
    // $ANTLR end "file"



    // $ANTLR start "row"
    // CSV.g:8:1: row returns [List<String> list] : a= value ( Comma b= value )* ( LineBreak | EOF ) ;
    public final List<String> row() throws RecognitionException {
        List<String> list = null;


        String a =null;

        String b =null;


        list = new ArrayList<String>();
        try {
            // CSV.g:10:5: (a= value ( Comma b= value )* ( LineBreak | EOF ) )
            // CSV.g:10:8: a= value ( Comma b= value )* ( LineBreak | EOF )
            {
            pushFollow(FOLLOW_value_in_row84);
            a=value();

            state._fsp--;


            list.add(a);

            // CSV.g:10:36: ( Comma b= value )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==Comma) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // CSV.g:10:37: Comma b= value
            	    {
            	    match(input,Comma,FOLLOW_Comma_in_row89); 

            	    pushFollow(FOLLOW_value_in_row93);
            	    b=value();

            	    state._fsp--;


            	    list.add(b);

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            if ( input.LA(1)==EOF||input.LA(1)==LineBreak ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return list;
    }
    // $ANTLR end "row"



    // $ANTLR start "value"
    // CSV.g:13:1: value returns [String val] : ( SimpleValue | QuotedValue );
    public final String value() throws RecognitionException {
        String val = null;


        Token SimpleValue2=null;
        Token QuotedValue3=null;

        try {
            // CSV.g:14:5: ( SimpleValue | QuotedValue )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==SimpleValue) ) {
                alt3=1;
            }
            else if ( (LA3_0==QuotedValue) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // CSV.g:14:8: SimpleValue
                    {
                    SimpleValue2=(Token)match(input,SimpleValue,FOLLOW_SimpleValue_in_value147); 

                    val = (SimpleValue2!=null?SimpleValue2.getText():null);

                    }
                    break;
                case 2 :
                    // CSV.g:15:8: QuotedValue
                    {
                    QuotedValue3=(Token)match(input,QuotedValue,FOLLOW_QuotedValue_in_value160); 

                     
                           val = (QuotedValue3!=null?QuotedValue3.getText():null); 
                           val = val.substring(1, val.length()-1); // remove leading- and trailing quotes 
                           val = val.replace("\"\"", "\""); // replace all `""` with `"` 
                          

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return val;
    }
    // $ANTLR end "value"

    // Delegated rules


 

    public static final BitSet FOLLOW_row_in_file33 = new BitSet(new long[]{0x00000000000000C0L});
    public static final BitSet FOLLOW_EOF_in_file39 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_value_in_row84 = new BitSet(new long[]{0x0000000000000030L});
    public static final BitSet FOLLOW_Comma_in_row89 = new BitSet(new long[]{0x00000000000000C0L});
    public static final BitSet FOLLOW_value_in_row93 = new BitSet(new long[]{0x0000000000000030L});
    public static final BitSet FOLLOW_set_in_row99 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_SimpleValue_in_value147 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_QuotedValue_in_value160 = new BitSet(new long[]{0x0000000000000002L});

}